syntax = "proto3";

package inventory;

option java_package = "com.example.grpc.inventory.stubs";
option java_multiple_files = true;

message ListProductAvailabilitiesRequest {
  repeated string product_ids = 1;
}

message ProductAvailability {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  int32 available_stock = 4;
  bool is_available = 5;
}

service InventoryService {
  rpc ListProductAvailabilities(ListProductAvailabilitiesRequest) returns (stream ProductAvailability);
}